--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,13 @@
+@import "~susy/sass/susy";
+
 $color: #ff0;
 
+
+
 body {
+  @include container(80em);
   background-color: $color;
   display: flex;
 }
+
+nav { @include span(25%); }
