--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,22 @@
 @import '~susy/sass/susy';
 @import '~breakpoint-sass/stylesheets/breakpoint';
 @import '~breakpoint-slicer/stylesheets/breakpoint-slicer';
-//@import '~sass-toolkit/stylesheets/toolkit';
+@import '~sass-toolkit/stylesheets/toolkit';
 @import '~sass-toolkit/stylesheets/toolkit/kickstart';
+
+//@include content-fade-in();
+
+.wf-loading {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    visibility: hidden;
+  }
+}
 
 $slicer-breakpoints:        0        400px       600px      800px        1050px;
 
@@ -21,6 +35,7 @@ body {
 
   background-color: $color; // to test sass
   display: flex; // to test prefixer
+  font-family: "Open Sans", sans;
 }
 
 nav {
